# MonitorConfig_Fork

./: Cargo.toml  LICENSE  README.md  build.bat  build.sh
docs/: building.md  get-brightness.md  get-capabilities.md  get-contrast.md  get-vcp.md  list.md  reset-defaults.md  save-settings.md  set-brightness.md  set-contrast.md  set-vcp.md  silent-mode.md
examples/: README.md  night_mode.sh  save_restore_profile.sh  set_all_brightness.bat  set_all_brightness.sh
src/: cli.rs  error.rs  lib.rs  main.rs  monitor.rs  native.rs  vcp.rs
